# project-movies-backend

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  movie_controller.rs  movie_repo.rs  movie_service.rs
src/api/movies/: mod.rs  movie_controller.rs  movie_repo.rs  movie_service.rs
src/api/reviews/: mod.rs  review_controller.rs  review_repo.rs  review_service.rs
src/data/: mod.rs  movie.rs  review.rs  review_input.rs
